--- a/react/src/App.css
+++ b/react/src/App.css
@@ -236,7 +236,8 @@ body {
     color: black;
     border-bottom: 2px solid #f4753c;
     border-top: 2px solid #f4753c;
-    background-color: darkgrey;
+    background-color: seashell;
+    padding-top: 2px;
   }
 
   input,
@@ -245,11 +246,13 @@ body {
     align-self: center;
   }
 
-  p,
-  label{
+  p{
     font: 1rem 'Fira Sans', sans-serif;
-
+    text-size-adjust: 18pt;
+    color: #f4753c;
+    border-bottom: black;
   }
+
 
   input{
     margin: .4rem;
@@ -269,6 +272,7 @@ body {
   }
   .editor-settings{
     justify-content: space-between;
+    border-right: 2px solid #f4753c;
   }
   
   .body-style{
@@ -276,8 +280,11 @@ body {
     line-height: 1;
     border-right: 2px solid #f4753c;
     border-top: 2px solid #f4753c;
-    display: flex;
+    display: inline-flex;
     width: 100%;
+    padding: 10px;
+    align-items: center;
+    justify-content: space-around;
   }
   .editor-buttons{
     background-color:#f4753c;
@@ -310,12 +317,41 @@ body {
   }
   .left-side{
     display: block;
+    border-right: 2px solid #f4753c;
+    height: 527px;
+    width: 502px; 
 
   }
   .eshape-buttons{
-    background-color:#f4753c;
-    grid-template-columns: 100px 100px 100px;
-    display: grid;
-    width: 300px;
-    height: 90px;
+  background-color: #f4753c;
+  color: #fff;
+  padding: 10px;
+  font-size: 18px;
+  width: 195px;
+  margin: 4px 0;
+  border: none;
+  cursor: pointer;
+  font-weight: 600;
+  justify-content: space-between;
+  display: grid;
+  grid-template-rows: 25px;
+  justify-content: center;
   }
+  .uidcheckbox{
+      display: block;
+      font: 1rem 'Fira Sans', sans-serif;
+      color: black;
+    }
+
+    .ebtns {
+    background-color: #f4753c;
+    color: white;
+    padding: 14px 20px;
+    font-size: 18px;
+    width: auto;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    font-weight: 600;
+    }
