Update form and method for sending data

--- a/react/src/App.css
+++ b/react/src/App.css
@@ -406,6 +406,10 @@ body {
   align-self: center;
 }
 
+.form{
+  display: inline;
+}
+
 button:hover{
   color: #4A4A4A;
   background-color: #FFFFFF;
