--- a/react/public/Styles/CSS/head.css
+++ b/react/public/Styles/CSS/head.css
@@ -8,7 +8,7 @@
   background: #fff;
   color: #00d300;
   -webkit-box-shadow: inset 0 -1px 0 0 1;
-          box-shadow: inset 0 -1px 0 0 1;
+  box-shadow: inset 0 -1px 0 0 1;
 }
 
 .page_header__fixed {
@@ -26,8 +26,8 @@
   font-size: inherit;
   line-height: 1;
   margin: 0;
-  padding-top: .7em;
-  padding-bottom: .8em;
+  padding-top: 0.7em;
+  padding-bottom: 0.8em;
 }
 
 .page__title a {
