add image files; update backend

--- a/react/src/App.css
+++ b/react/src/App.css
@@ -409,4 +409,11 @@ body {
   display: inline-flex;
 }
 
-
+.NodeIcons{
+  width: 40px;
+  height: 40px;
+}
+.LineColors{
+  width: 120px;
+  height: 45px;
+}
