--- a/react/src/App.css
+++ b/react/src/App.css
@@ -246,7 +246,13 @@ section {
   padding: 14px 20px;
 }
 
+.label{
+  z-index: 1;
+}
 
+.label, input{
+  z-index: 1;
+}
 
 p {
   font: 1rem "Fira Sans", sans-serif;
