add prettier formatting

--- a/react/src/components/Grid/styles.css
+++ b/react/src/components/Grid/styles.css
@@ -98,7 +98,7 @@
   .react-grid-item .minMax {
     font-size: 12px;
   }
-  .react-grid-item .add {
+  .react-grid-item .add {   
     cursor: pointer;
   }
   .react-grid-dragHandleExample {
@@ -118,3 +118,20 @@
     width: 60vw;
     border: 1px solid black;
   }
+
+/* .FileFunctions{
+  display: flex;
+  align-items: flex-start;
+  height: 100vh;
+  width: 20vw;
+}
+
+.UnUploaded{
+  display: flex;
+  align-items: flex-start;
+}
+
+.EditEditor{
+  display: flex;
+  align-items: flex-start;
+} */
