--- a/react/src/components/Grid/styles.css
+++ b/react/src/components/Grid/styles.css
@@ -1,6 +1,7 @@
 .Gem {
     width: 100vw;
     height: 100vh;
+    z-index: 999;
   }
   
   /* REACT GRID LAYOUT STYLES, this would not import for some reason */
@@ -131,6 +132,7 @@
     border: 3px solid #f4753c;
     margin-bottom: 10px;
     border-radius: 2%;
+    z-index: 999;
     box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
     0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
   }
@@ -141,7 +143,7 @@
     background-color: #fffdfd;
     border-top: 3px solid grey;
     margin-bottom: 10px;
-    
+    z-index: 999;
   }
 
   .IMMenuLabel{
